--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/geojson": "^7946.0.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/three": "^0.180.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "geojson": "^0.5.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
