--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "pigeon-maps": "^0.22.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "react-use-websocket": "^4.13.0",
     "three": "^0.180.0"
   },
   "devDependencies": {
