--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-use-websocket": "^4.13.0",
+    "resend": "^6.5.2",
     "three": "^0.180.0"
   },
   "devDependencies": {
