--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.0",
     "next": "15.5.2",
     "pigeon-maps": "^0.22.1",
     "react": "19.1.0",
